@@ -1,3 +1,5 @@
+* deprecation extension: Use Firebug's console.warn and console.error. [Andrew Dupont, Tobie Langel]
+
 * deprecation extension: Add deprecation extension. [Tobie Langel]
 
 *1.6.0.2* (January 25, 2008)
